[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/skills_menu/prefabs/skill_option/themes/skill-option.theme" type="Theme" id=1]
[ext_resource path="res://ui/skills_menu/prefabs/skill_option/scripts/skill-option.gd" type="Script" id=2]

[node name="SkillOption" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 0, 30 )
theme = ExtResource( 1 )
custom_constants/separation = 50
script = ExtResource( 2 )

[node name="SkillButton" type="Button" parent="." groups=[
"skills_menu_buttons",
]]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "Skill Name"
flat = true
align = 0

[node name="SkillCost" type="Label" parent="."]
margin_left = 250.0
margin_right = 333.0
margin_bottom = 30.0
size_flags_vertical = 1
text = "Skill Cost"
valign = 1

[connection signal="focus_entered" from="SkillButton" to="." method="_on_SkillButton_focus_entered"]
